tests/snapshots/e2e__feature_tests__nvmrc__Fish.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
fnm env | source
echo v8.11.3 > .nvmrc
fnm install
fnm use
if test (node -v) != "v8.11.3"
    echo 'Expected Node version to be "v8.11.3", Got: '(node -v)
    exit 1
end
