tests/snapshots/e2e__feature_tests__nvmrc__Zsh.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
set -e
eval "$(fnm env)"
echo v8.11.3 > .nvmrc
fnm install
fnm use
if [ "$(node -v)" != "v8.11.3" ]; then
    echo 'Expected Node version to be "v8.11.3", Got: '"$(node -v)"
    exit 1
fi
